--- a/appMilka/package.json
+++ b/appMilka/package.json
@@ -4,10 +4,7 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.app",
-    "tns-android": {
-      "version": "4.1.2"
-    }
+    "id": "org.nativescript.app"
   },
   "dependencies": {
     "nativescript-theme-core": "~1.0.4",
