Added android platform support

--- a/appMilka/package.json
+++ b/appMilka/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.app",
     "tns-ios": {
       "version": "4.1.1"
+    },
+    "tns-android": {
+      "version": "4.1.3"
     }
   },
   "dependencies": {
